# se-toolkit-lab-8

./: REPORT.md  docker-compose.yml  pyproject.toml  report.txt
backend/src/lms_backend/routers/: items.py
lab/setup/: setup-simple.md
lab/tasks/required/: task-1.md  task-2.md
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  observability.py  server.py  settings.py
nanobot/: Dockerfile  config.json  entrypoint.py
nanobot/workspace/cron/: jobs.json
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
scripts/: query-qwen-code-api.py
wiki/: qwen-code-api-dotenv-secret.md
